method cityPOpulation completed